--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
+        "@vercel/analytics": "^1.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -76,6 +77,7 @@
         "react-intersection-observer": "^9.16.0",
         "react-resizable-panels": "^3.0.3",
         "react-responsive-masonry": "^2.7.1",
+        "react-rough-notation": "^1.0.5",
         "react-syntax-highlighter": "^15.6.1",
         "react-wrap-balancer": "^1.1.1",
         "recharts": "^3.0.2",
