--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
     "name": "app",
     "version": "0.1.0",
     "private": true,
+  "packageManager": "npm@10.9.2",
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
+
+
+    
     "dependencies": {
         "@babel/parser": "^7.28.0",
         "@headlessui/react": "^2.2.7",
@@ -77,7 +81,7 @@
         "react-intersection-observer": "^9.16.0",
         "react-resizable-panels": "^3.0.3",
         "react-responsive-masonry": "^2.7.1",
-        "react-rough-notation": "^1.0.5",
+        
         "react-syntax-highlighter": "^15.6.1",
         "react-wrap-balancer": "^1.1.1",
         "recharts": "^3.0.2",
